--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -194,4 +194,10 @@
     <string name="sweets3_name">Momento Dulce</string>
     <string name="sweets4_name">La Fábrica de Helado de Barrio chino Original</string>
     <string name="sweets5_name">Fay Da Bakery</string>
+    <string name="Historical_sight9_historical_information">Las fantasías y confusión uno puede albergar sobre el límite oriental de la Calle Canal, son comprensibles porque Chinatown es la encrucijada donde la ciudad del pasado y el futuro se reunirá. Aquí sigue siendo una de las pocas comunidades de Manhattan que fomenta un sentimiento de respeto por su historia.</string>
+    <string name="Historical_sight3_name">Los cinco puntos: Punto 3</string>
+    <string name="Activity6_shopping_name">Pearl River Mart</string>
+    <string name="restaurant4_name">Ping</string>
+    <string name="fast_food1_name">McDonald\'s</string>
+    <string name="fast_food4_name">Popeyes Luisiana Kitchen</string>
 </resources>
