--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,2 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="app_name">Chinatown_Tour</string>
+    <string name="transport_button">交通运输</string>
+    <string name="food_button">食品</string>
+    <string name="hotel_button">酒店</string>
+    <string name="activities_button">活动。</string>
+    <string name="history_button">历史记录</string>
+    <string name="itinerary_button">旅行指南</string>
+    <string name="hotel1_description">设置脚处曼哈顿桥的唐人街，这个时尚的酒店，有一个现代的氛围中的世纪是一个 3 分钟的步行路程，大街地铁站和一个 8 分钟的步行路程，博物馆的中国在美利坚合众国。 时尚、现代的客房提供免费无线网络、 iPod 坞站和平面电视，除了 Keurig 咖啡机。 升级后的客房和 1 间卧室的套房添加网桥或城市景观。 在现场设有停车场（收费）。</string>
+    <string name="hotel2_description">酒店 Mimosa 位于东侧居民区的纽约城，仅一英里，距离地面 0 ．所有房间都配有平面电视。 房间有私人浴室配有浴缸或淋浴。 额外功能包括免费洗浴用品和吹风机。 您将会找到一个 24 小时服务的前台，酒店。 一个世界贸易中心是一英里从酒店 Mimosa 、和国家的 9月11日 纪念馆和博物馆是 1.1 英里处，酒店。 最近的机场是 LaGuardia 机场 7 英里，酒店 Mimosa 。</string>
+    <string name="hotel3_description">放松身心，设计精美的客房和套房，配备现代家具、独立阳台和落地窗和令人惊叹的城市景色。 品尝时令美式菜肴，在湖的房间。 一个收件人的证书 TripAdvisor 卓越，我们的现代的曼哈顿酒店提供私密的活动空间、免费使用的无线网络，以及一个充满活力的氛围，您可以在这里聚会、休息室和就餐，在美丽的大苹果。 位于曼哈顿下城区的一个折衷的居民区，可以很方便地游览当地的夜生活区，步行到时尚精品店的 SoHo 一族，并在小意大利餐厅用餐。</string>
+    <string name="hotel4_description">俯瞰哥伦布公园，这一当代中国城酒店 0.3 英里，距离小意大利和一个 5 分钟的步行路程，距离最近的地铁站。 休闲风格的客房和套房，装饰成一个中立的调色板，提供定制家具、床垫、平面电视和迷你冰箱；一些包括露台和/或城市景观。 高速互联网接入。 奖励包括免费欧陆式早餐、一个商务中心和一个现代化的大堂，设有休息区。 有多个很好的休闲餐饮场所内的挡块，该酒店。</string>
+    <string name="hotel5_description">50 Bowery 酒店位于唐人街附近的纽约城，只有 0.9 英里，距离地面 0 。 客人可以享受现场酒吧。 专用停车场可供使用的站点，在这家酒店的每个房间都有空调，有一个平面电视。 一些客房设有一个休息区，为旅客提供便利。 一个露台或阳台上的特色在某些房间。 客房设有私人浴室。 为您提供舒适的设施，您将会找到免费洗浴用品和吹风机。您将找到一个 24 小时服务的前台，酒店。 一个世界贸易中心 0.9 英里，距酒店 50 Bowery ， 9月11日 和国家纪念碑和博物馆是 0.9 英里。 最近的机场是 LaGuardia 机场 7 英里，距酒店 50 Bowery 。</string>
+    <string name="hotel6_description">位于曼哈顿市中心，这家酒店是一个步骤，小意大利，并从 400 英尺的大街地铁站。 其特色客房，配有平面电视和免费无线网络连接。 每一间客房在 Bowery Hanbee 最佳西方酒店提供咖啡设施。 每个包括有线电视、室内电影和多个国际电视频道。 一个健身房和一个商务中心，可前往酒店。 Bowery Hanbee 最佳西方酒店还提供洗衣设施和 24 小时服务的前台。 Bowery Hanbee 酒店步行即可到达著名的购物中心， SoHo 和热闹的唐人街。 地面零是一英里远的地方。</string>
+    <string name="hotel7_description">在曼哈顿下东侧，酒店 91 是一个 5 分钟的步行路程，唐人街和东百老汇地铁站。 它提供免费的有线上网和客房，配有平面有线电视。 客房配有办公桌、电吹风、闹钟收音机。 一个叫醒服务是可用的。 91 家酒店为您提供 24 小时前台服务、自动柜员机、和洗衣设施。 小意大利是一个 10 分钟的步行路程，酒店 91 而地面零和南街海港有 20 分钟的路程。 布鲁克林大桥和华尔街都不到一英里远的地方。</string>
+    <string name="hotel8_description">位于居民区的 Bowery 纽约市、一英里的一个世界贸易中心，美国太平洋酒店的空调客房配有免费无线网络在酒店内。 每间客房均配有平面电视。 地面零是一英里从美国太平洋酒店、和国家的 9月11日 纪念馆和博物馆是一英里远的地方。 LaGuardia 机场仅 7 公里，酒店。</string>
+    <string name="hotel10_description">太阳明亮的酒店就在市中心的唐人街和一个街区，大圣地铁站。 酒店提供无线网络连接和一个 24 小时服务的前台。</string>
+    <string name="hotel9_description">Tribeca 蓝，坐落在一条繁华的闹市区的路口运河街和百老汇。 该位置不起一个城市的感觉，很近（步行可达），以时尚的街区，如 SoHo 和 Tribeca 。 如果这还不是足够的可供选择的食品和饮料、唐人街、小意大利的易于获得，通过脚踏。 客人还可以步行一位走得更远，进入一个世界贸易中心和 9/11 纪念馆，以及西、格林威治、和东部地区的村庄。</string>
+    <string name="hotel11_description">拥有全新的、宽敞的客房和套房，以及一个方便的位置，靠近纽约证券交易所、 9月11日 纪念碑和一个世界贸易中心、 Fairfield 酒店是您的最佳去处，探讨从曼哈顿。</string>
+    <string name="hotel12_description">睡得安心在一个舒适的房间。 您可以享受娱乐，提供免费无线网络连接、 DVD 播放机、 iPod 基座和液晶高清电视，有超过 200 高级频道。 如果您需要将某些工作，充分利用办公桌和灯在房间中。 早晨，使自己的一个分类的咖啡的咖啡机。</string>
+    <string name="hotel13_description">无论您是商务出行还是休闲度假，新世界酒店为您提供了多种类型的客房，以确保舒适的适合您的需要以较低的价格。 位于唐人街中心，在 Bowery 之间、海丝特圣和大街。 新世界酒店把宝藏唐人街尽在您的指尖。 特别食品、物品、和商店上可以找到运河街、万隆工程街、和大街。</string>
+    <string name="hotel14_description">拥有一个共同的休息室、运河 Loft 酒店坐落在纽约在纽约状态的区域，一个 11 分钟的步行路程， Bloomingdales 。 约 1.2 公里，布鲁克林大桥，属性也是 1.6 公里，距地面零，并为客人提供免费无线网络连接。 这家酒店是一个 20 分钟的步行路程，有一个世界贸易中心。</string>
+    <string name="hotel15_description">温莎酒店都提供可负担得起的和宽敞的客房，每个客房都崇拜的现代设施和装饰。 小意大利位置便利，在唐人街，并只在几百英尺的距离酒店。 这也是酒店仅数分钟路程，华尔街、 SOHO 区、和网关的自由女神像。 此外，便利的地铁车站带领您到忽闪的时代广场、魅力的剧院区，著名的中央公园，在第五大道购物，事件的麦迪逊广场花园、和精神的洛克菲勒中心。</string>
+    <string name="hotel16_description">Manhattan Bowery 旅馆位于纽约， 400 米远，小意大利和 1.3 公里，从布鲁克林大桥。 Manhattan Bowery 旅馆配备免费无线网络和一个 24 小时服务的前台。 一个世界贸易中心 1.5 公里，而地面零为 1.6 公里，酒店。 最近的机场是 LaGuardia 机场， 12 公里到酒店。</string>
+    <string name="hotel17_description">Bowery 格兰德酒店为您提供干净的房间和基本设施，您决定为自己在那里度过的其余部分现金，您保存在华禧酒店。 仅数分钟路程，小意大利、市区购物商场和右边的转角处的威廉斯堡大桥。 纽约市的其余部分是供您使用火车只有几站地，其中两个在路我们获得了如此之近，我们的酒店，因此，必须更加努力地工作，您的鼠标滚动，使他们除了我们在 Google 地图。</string>
+    <string name="hotel18_description">Comfort Inn 下东侧，地理位置优越，位于曼哈顿中心，是一家新建的酒店，这一地区。 到地铁站也只有很短的街区，使客人可步行至市中心，华尔街和受欢迎的纽约城的热点地区，如南街海港、世界贸易中心、小意大利和布鲁克林大桥公园等等！</string>
+</resources>
