--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -25,4 +25,18 @@
     <string name="hotel16_description">Manhattan Bowery 旅馆位于纽约， 400 米远，小意大利和 1.3 公里，从布鲁克林大桥。 Manhattan Bowery 旅馆配备免费无线网络和一个 24 小时服务的前台。 一个世界贸易中心 1.5 公里，而地面零为 1.6 公里，酒店。 最近的机场是 LaGuardia 机场， 12 公里到酒店。</string>
     <string name="hotel17_description">Bowery 格兰德酒店为您提供干净的房间和基本设施，您决定为自己在那里度过的其余部分现金，您保存在华禧酒店。 仅数分钟路程，小意大利、市区购物商场和右边的转角处的威廉斯堡大桥。 纽约市的其余部分是供您使用火车只有几站地，其中两个在路我们获得了如此之近，我们的酒店，因此，必须更加努力地工作，您的鼠标滚动，使他们除了我们在 Google 地图。</string>
     <string name="hotel18_description">Comfort Inn 下东侧，地理位置优越，位于曼哈顿中心，是一家新建的酒店，这一地区。 到地铁站也只有很短的街区，使客人可步行至市中心，华尔街和受欢迎的纽约城的热点地区，如南街海港、世界贸易中心、小意大利和布鲁克林大桥公园等等！</string>
+    <string name="activity1_static">专门用于展示和保存 的历史、传统和文化的中国移民在美国</string>
+    <string name="activity2_static">纽约市中心最大的佛教寺院；提供服务，如 正式仪式的周末、算命、婚礼、 和领域的朋友和死者家属支付他们的尊重</string>
+    <string name="activity3_static">一个亚洲的小吃天堂，适合那些希望能满足他们的甜食 ；销售各种干制食品、充满异国情调的难以找到的可口美食，和怀旧的西开心的事</string>
+    <string name="activity4_static">一个购物的经验，一个露天集市的感觉， 完成与供应商愿意讨价还价</string>
+    <string name="activity5_static">一个酒吧的灵感来自欧洲的 apothecaries 和就像 一个化学实验；提供超过 250 的鸡尾酒，称为处方</string>
+    <string name="activity6_static">在唐人街；有一个篮球场、 游乐场、 Astroturf 字段；北是一个区域用于麻将和卡的球员</string>
+    <string name="activity7_static">建立以服务和保护的利益，使中国人民在 纽约大都会地区；提供社会服务、语言类和文化的保护活动。</string>
+    <string name="activity8_static">一家专门研究风水，水晶和星座的神秘商店;这是城市中唯一拍摄和读取光环的地方</string>
+    <string name="activity9_static">一个现代的自然历史博物馆，位于一个 货运电梯；收集的独特的伪影。</string>
+    <string name="activity10_static">二楼的一间公寓的建设； 这虽小但充满活力的酒吧，以鼓励顾客带出来的经典酿酒喝的水龙头</string>
+    <string name="activity11_static">花一天的休闲和放松心情；提供水疗 和美容服务的脸部和身体</string>
+    <string name="activity12_static">从 1920 年代的 1840通过’ s ，了解早期时代的 街头帮派的纽约市和约的演变过程，从小型包移民的暴徒，紧密结合在一起的 忠诚的一个演变、企业风格美的集团。 桑街，从唐人街，小 意大利，是其中最臭名昭着的歹徒在纽约起來。 从以前的 5 点，纽约最 声名狼藉的贫民窟，在唐人街的狭窄小巷的\"血腥的角度。\"在小意大利的历史名胜区， 我们了解了冷酷无情的战术的第一个黑手党头目的纽约，纽约警察局的骄傲的努力， Liutenant Petrosino Joe 的打击这些暴徒。 有组织的犯罪，我们知道它是出生在这些街道。</string>
+    <string name="activity13_static">供应的爱尔兰语、德语、意大利语和最近在华人社区的 群众；星期日举行的英语、汉语普通话和广东话；一家中文学校</string>
+    <string name="activity14_static">每年的庆祝活动的开始，又是 中国； lunisolar 日历功能的各类供应商、节日庆祝活动、建立不分年龄人人共享的食物</string>
 </resources>
