--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -39,4 +39,21 @@
     <string name="activity12_static">从 1920 年代的 1840通过’ s ，了解早期时代的 街头帮派的纽约市和约的演变过程，从小型包移民的暴徒，紧密结合在一起的 忠诚的一个演变、企业风格美的集团。 桑街，从唐人街，小 意大利，是其中最臭名昭着的歹徒在纽约起來。 从以前的 5 点，纽约最 声名狼藉的贫民窟，在唐人街的狭窄小巷的\"血腥的角度。\"在小意大利的历史名胜区， 我们了解了冷酷无情的战术的第一个黑手党头目的纽约，纽约警察局的骄傲的努力， Liutenant Petrosino Joe 的打击这些暴徒。 有组织的犯罪，我们知道它是出生在这些街道。</string>
     <string name="activity13_static">供应的爱尔兰语、德语、意大利语和最近在华人社区的 群众；星期日举行的英语、汉语普通话和广东话；一家中文学校</string>
     <string name="activity14_static">每年的庆祝活动的开始，又是 中国； lunisolar 日历功能的各类供应商、节日庆祝活动、建立不分年龄人人共享的食物</string>
+    <string name="activity15_static">每年的庆祝活动结束后，秋收； 11 月 15 日第 8 次农历;功能舞台表演、文化艺术、工艺品、书法、礼品展位、月饼品尝，等等。</string>
+    <string name="Activity1_shopping_Static_Info">没有虚饰壮汉储存了各种家居用品和亚洲风格的装饰，从 teapots 到小型的家具。</string>
+    <string name="Activity2_shopping_Static_Info">T 型弹出商店是一个 trendsetting 在线二手服装商店，提供一流的产品和一流的客户服务，购物者从舒适的居所</string>
+    <string name="Activity3_shopping_Static_Info">如果您需要花的安排，这是一个地方可去！ 价格合理、美丽的选项供您选择！</string>
+    <string name="Activity4_shopping_Static_Info">各种筷子的优秀选择和展示。选择范围从简单的儿童到优雅的正式筷子。</string>
+    <string name="Activity5_shopping_Static_Info">一家专门研究风水，水晶和星座的神秘商店;这是城市中唯一拍摄和读取光环的地方</string>
+    <string name="Activity6_shopping_Static_Info">拥有3层中国服饰，配饰，家居用品的折衷主义商场。</string>
+    <string name="Activity7_shopping_Static_Info">来这里可爱又便宜的玩具！由于极其便宜的价格，这么多产品和容易迷路。小毛绒动物（rilakkuma，doraemon，龙猫，神奇宝贝等）从3美元到5美元不等</string>
+    <string name="Activity8_shopping_Static_Info">有露天集市的开放式街道购物体验，配有愿意讨价还价的供应商</string>
+    <string name="Historical_sight1_historical_information">大乘佛教寺庙是免费的，向公众开放，并提供一个大型的冥想区，有足够的空间在16英尺高的金佛的凝视下休息和反射。只是不要指望在这里沉默;通常会有一个欢乐的音轨播放（毕竟这是纽约市）。虽然巨佛是寺庙的主要景点，但千万不要错过在二楼礼品店展出的一系列错综复杂的象牙雕刻（没有任何出售）。</string>
+    <string name="Historical_sight2_historical_information">博物馆促进所有文化背景的人们之间的对话和理解，通过创新的展览，教育和文化活动，为160年的美国华人历史带来生动的生活。</string>
+    <string name="Historical_sight3_historical_information">五点（或五点）是纽约市曼哈顿下城一座19世纪的街区。该街区一般被定义为西边的中心街，东边的鲍威里，北边的运河街和南边的帕克街。</string>
+    <string name="Historical_sight4_historical_information">五点（或五点）是纽约市曼哈顿下城一座19世纪的街区。该街区一般被定义为西边的中心街，东边的鲍威里，北边的运河街和南边的帕克街。</string>
+    <string name="Historical_sight5_historical_information">Jarmulowsky银行大楼是一栋12层的建筑，原先是纽约市曼哈顿下东区的Jarmulowsky银行。位于运河街和乌节街，Jarmulowsky银行大楼由建筑师Rouse Goldstone于1912年以美术风格建造。</string>
+    <string name="Historical_sight6_historical_information">在爱德华 Mooney Bowery 的房子位于 18 ，佩尔街的拐角处，在唐人街附近的曼哈顿、纽约城市建于 1785 和 1789 之间的富裕的屠夫的爱德华 Mooney 在陆地上他购买后就被没收了从英国忠于政府的詹姆斯· Lancey 。</string>
+    <string name="Historical_sight7_historical_information">派克街的犹太教堂，建于 1903-04 的。 Kalwarie 教会中以色列的儿子，是一个难得的未亡犹太会堂的建筑，从这一时期的纽约的历史记录时。 下东侧担任美利坚合众国的主要门户网站的数以百万计的犹太移民。</string>
+    <string name="Historical_sight8_historical_information">哥伦布公园位于唐人街是一个伟大的地方，参观了儿童和有一个美妙的一天。 有的座位和摇摆不定的一个安全区域，让孩子可以玩。 在大多数情况下，您将运行到音乐家演奏的音乐生活。</string>
 </resources>
