--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -306,8 +306,7 @@
     <string name="Activity6_shopping_phone_number" translatable="false"> (212) 431-4770 </string>
 
     <string name="Activity7_shopping_name">Chinatown Toy Store  </string>
-    <string name="Activity7_shopping_Static_Info"> Come here for cute and cheap toys! So much product and easy to get lost in because of extremely cheap prices. Small stuffed
-    animals (rilakkuma, doraemon, Totoro, Pokémon, etc) ranging from 3-5$ </string>
+    <string name="Activity7_shopping_Static_Info">" Come here for cute and cheap toys! So much product and easy to get lost in because of extremely cheap prices. Small stuffed     animals (rilakkuma, doraemon, Totoro, Pokémon, etc) ranging from $3 to $5 "</string>
     <string name="Activity7_shopping_description"> Shopping </string>
     <string name="Activity7_shopping_images" translatable="false">  </string>
     <string name="Activity7_shopping_address" translatable="false"> 83 Bayard St, New York, NY 10013 </string>
@@ -358,7 +357,7 @@
 
     <string name="Historical_sight6_name"> Edward Mooney House </string>
     <string name="Historical_sight6_address" translatable="false"> 18 Bowery, New York, NY 10013 </string>
-    <string name="Historical_sight6_historical_information">The Edward Mooney House located at 18 Bowery at the corner of Pell Street in the Chinatown neighborhood of Manhattan, New York City was built between 1785 and 1789 for wealthy butcher Edward Mooney on land he purchased after it was confiscated from British Loyalist James De Lancey. The Jarmulowsky Bank Building is a 12-story building formerly housing the Jarmulowsky Bank on the Lower East Side of Manhattan, New York City. Located at Canal Street and Orchard Street, the Jarmulowsky Bank Building was built by architects Rouse &amp; Goldstone in 1912, in Beaux-Arts style.</string>
+    <string name="Historical_sight6_historical_information">"The Edward Mooney House located at 18 Bowery at the corner of Pell Street in the Chinatown neighborhood of Manhattan, New York City was built between 1785 and 1789 for wealthy butcher Edward Mooney on land he purchased after it was confiscated from British Loyalist James De Lancey. "</string>
     <string name="Historical_sight6_images" translatable="false">  </string>
     <string name="Historical_sight6_website" translatable="false"> https://en.wikipedia.org/wiki/Edward_Mooney_House </string>
 
