--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
     <string name="hotel1_name" translatable="false">The Leon Hotel</string>
     <string name="hotel1_address" translatable="false">125 Canal St, New York, NY 10002</string>
-    <string name="hotel1_description_preview">     </string>
+    <string name="hotel1_description_preview"> Set at the foot of the Manhattan Bridge in Chinatown, this hip hotel with a midcentury-modern vibe...</string>
     <string name="hotel1_description">Set at the foot of the Manhattan Bridge in Chinatown, this hip hotel with a midcentury-modern vibe is a 3-minute walk from the Grand Street subway station and an 8-minute walk from the Museum Of Chinese In America.
     Sleek, contemporary rooms offer complimentary Wi-Fi, iPod docks and flat-screen TVs, in addition to Keurig coffeemakers. Upgraded rooms and 1-bedroom suites add bridge or city views.
     Off-site parking is available for a fee.</string>
@@ -23,16 +23,16 @@
     <string name="hotel1_phone_number" translatable="false"> (212) 390-8833   </string>
 
     <string name="hotel2_name" translatable="false">Hotel Mimosa</string>
-    <string name="hotel2_description_preview">     </string>
+    <string name="hotel2_description_preview">otel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero... </string>
     <string name="hotel2_address" translatable="false">79 Division St, New York, NY 10002</string>
-    <string name="hotel2_description">Hotel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero.All rooms include a flat-screen TV. The rooms have a private bathroom fitted with a bathtub or shower. Extras include free toiletries and a hairdryer. You will find a 24-hour front desk at the property. One World Trade Center is one mile from Hotel Mimosa, and National September 11 Memorial &amp; Museum is 1.1 miles from the property. The nearest airport is LaGuardia Airport, 7 miles from Hotel Mimosa.</string>
+    <string name="hotel2_description">Hotel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero. All rooms include a flat-screen TV. The rooms have a private bathroom fitted with a bathtub or shower. Extras include free toiletries and a hairdryer. You will find a 24-hour front desk at the property. One World Trade Center is one mile from Hotel Mimosa, and National September 11 Memorial &amp; Museum is 1.1 miles from the property. The nearest airport is LaGuardia Airport, 7 miles from Hotel Mimosa.</string>
     <string name="hotel2_images" translatable="false"> </string>
     <string name="hotel2_website_link" translatable="false">https://www.hotelmimosany.com/</string>
     <string name="hotel2_phone_number" translatable="false">  (212) 343-4243  </string>
 
     <string name="hotel3_name" translatable="false">Wyndham Garden Chinatown</string>
     <string name="hotel3_address" translatable="false">93 Bowery, New York, NY 10002</string>
-    <string name="hotel3_description_preview">     </string>
+    <string name="hotel3_description_preview"> Relax in beautifully designed guest rooms and suites with contemporary furnishings, private balconies and floor to ceiling windows with stunning views of the city...</string>
     <string name="hotel3_description">Relax in beautifully designed guest rooms and suites with contemporary furnishings, private balconies and floor to ceiling windows with stunning views of the city. Savor seasonal American cuisine at the Wu Room. A recipient of the TripAdvisor Certificate of Excellence, our modern Manhattan hotel features intimate event space, complimentary Wi-Fi, and a dynamic ambiance where you can meet, lounge and dine in the beautiful Big Apple. Located in an eclectic Lower Manhattan neighborhood, it\'s easy to explore local nightlife, walk to the trendy shops of SoHo, and dine in Little Italy. </string>
     <string name="hotel3_images" translatable="false">None</string>
     <string name="hotel3_website_link" translatable="false">http://www.wyndhamgardenchinatownnyc.com/</string>
@@ -40,8 +40,8 @@
 
     <string name="hotel4_name" translatable="false">Hotel Mulberry</string>
     <string name="hotel4_address" translatable="false">52 Mulberry St, New York, NY 10013</string>
-    <string name="hotel4_description_preview">     </string>
-    <string name="hotel4_description">Overlooking Columbus Park, this contemporary Chinatown hotel is 0.3 miles from Little Italy and a 5-minute walk from the nearest subway station. Casual rooms and suites are decorated in a neutral palette with custom furnishings and offer pillow-top mattresses, flat-screen TVs and minifridges; some include terraces and/or city views. High-speed Internet access is available. Perks include free continental breakfast daily, a business center and a modern lobby with seating areas. Several fine and casual dining options are within a block of the hotel.</string>
+    <string name="hotel4_description_preview"> Overlooking Columbus Park, this contemporary Chinatown hotel is 0.3 miles from Little Italy and a 5-minute walk from the nearest subway station...    </string>
+    <string name="hotel4_description"> Overlooking Columbus Park, this contemporary Chinatown hotel is 0.3 miles from Little Italy and a 5-minute walk from the nearest subway station. Casual rooms and suites are decorated in a neutral palette with custom furnishings and offer pillow-top mattresses, flat-screen TVs and minifridges; some include terraces and/or city views. High-speed Internet access is available. Perks include free continental breakfast daily, a business center and a modern lobby with seating areas. Several fine and casual dining options are within a block of the hotel.</string>
     <string name="hotel4_images" translatable="false">None</string>
     <string name="hotel4_website_link" translatable="false">http://www.hotelmulberry.com/</string>
     <string name="hotel4_phone_number" translatable="false"> (212) 385-4633   </string>
