--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
 
     <string name="hotel5_name" translatable="false">Hotel 50 Bowery NYC</string>
     <string name="hotel5_address" translatable="false">50 Bowery, New York, NY 10013</string>
-    <string name="hotel5_description_preview">     </string>
+    <string name="hotel5_description_preview">Hotel 50 Bowery is located in the Chinatown neighborhood in New York City, just 0.9 miles from Ground Zero... </string>
     <string name="hotel5_description">Hotel 50 Bowery is located in the Chinatown neighborhood in New York City, just 0.9 miles from Ground Zero. Guests can enjoy the on-site bar. Private parking is available on site.Each room at this hotel is air conditioned and has a flat-screen TV. Certain rooms have a sitting area for your convenience. A terrace or balcony are featured in certain rooms. The rooms have a private bathroom. For your comfort, you will find free toiletries and a hairdryer.You will find a 24-hour front desk at the property. One World Trade Center is 0.9 miles from Hotel 50 Bowery, and National September 11 Memorial &amp; Museum is 0.9 miles away. The nearest airport is LaGuardia Airport, 7 miles from Hotel 50 Bowery.</string>
     <string name="hotel5_images" translatable="false">None</string>
     <string name="hotel5_website_link" translatable="false">https://www.jdvhotels.com/hotels/new-york/nyc/hotel-50-bowery-nyc</string>
@@ -56,7 +56,7 @@
 
     <string name="hotel6_name" translatable="false">Best Western Bowery Hanbee Hotel</string>
     <string name="hotel6_address" translatable="false">231 Grand St, New York, NY 10013</string>
-    <string name="hotel6_description_preview">     </string>
+    <string name="hotel6_description_preview">Located in downtown Manhattan, this hotel is steps from Little Italy and 400 feet from the Grand Street Subway station... </string>
     <string name="hotel6_description">Located in downtown Manhattan, this hotel is steps from Little Italy and 400 feet from the Grand Street Subway station. It features guest rooms with flat-screen TVs and free Wi-Fi. Every room at the Best Western Bowery Hanbee Hotel provides coffee facilities. Each includes cable TV with in-room movies and a variety of international TV channels. A gym and a business center are available at the hotel. Bowery Hanbee Best Western Hotel also offers laundry facilities and a 24-hour front desk. Bowery Hanbee Hotel is within walking distance of the fabulous shopping of SoHo and the vibrant Chinatown area. Ground Zero is one mile away. </string>
     <string name="hotel6_images" translatable="false">None</string>
     <string name="hotel6_website_link" translatable="false">http://www.bw-boweryhanbeehotel.com/</string>
@@ -64,7 +64,7 @@
 
     <string name="hotel7_name" translatable="false">Hotel 91</string>
     <string name="hotel7_address" translatable="false">91 E Broadway, New York, NY 10002</string>
-    <string name="hotel7_description_preview">     </string>
+    <string name="hotel7_description_preview"> In Manhattan’s Lower East Side, Hotel 91 is a 5-minute walk from Chinatown and the East Broadway subway station...</string>
     <string name="hotel7_description">In Manhattan’s Lower East Side, Hotel 91 is a 5-minute walk from Chinatown and the East Broadway subway station. It offers free wired internet and rooms with flat-screen cable TVs. Guest rooms include desks, hairdryers and alarm clock radios. A wakeup service is available. Hotel 91 offers a 24-hour front desk, ATM, and laundry facilities. Little Italy is a 10-minute walk from Hotel 91 while Ground Zero and South Street Seaport are 20 minutes away. Brooklyn Bridge and Wall Street are less than one mile away.
     </string>
     <string name="hotel7_images" translatable="false">None</string>
@@ -73,7 +73,7 @@
 
     <string name="hotel8_name" translatable="false">U.S. Pacific Hotel</string>
     <string name="hotel8_address" translatable="false">276 Canal St, New York, NY 10013</string>
-    <string name="hotel8_description_preview">     </string>
+    <string name="hotel8_description_preview">Located in the Bowery neighborhood in New York City, one mile from One World Trade Center, U.S. Pacific Hotel features... </string>
     <string name="hotel8_description">Located in the Bowery neighborhood in New York City, one mile from One World Trade Center, U.S. Pacific Hotel features air-conditioned rooms with free WiFi throughout the property. Each room is fitted with a flat-screen TV. Ground Zero is one mile from U.S. Pacific Hotel, and National September 11 Memorial &amp;amp; Museum is one mile away. LaGuardia Airport is 7 miles from the property. </string>
     <string name="hotel8_images" translatable="false">None</string>
     <string name="hotel8_website_link" translatable="false">http://sohogardenhotel.com/</string>
@@ -81,7 +81,7 @@
 
     <string name="hotel9_name" translatable="false">Tribeca blu</string>
     <string name="hotel9_address" translatable="false">blu hotel, New York, NY 10013</string>
-    <string name="hotel9_description_preview">     </string>
+    <string name="hotel9_description_preview"> Tribeca Blu sits on a busy downtown intersection of Canal Street and Broadway. The location does afford an urban feel with ... </string>
     <string name="hotel9_description">Tribeca Blu sits on a busy downtown intersection of Canal Street and Broadway. The location does afford an urban feel with close proximity (walking distance) to trendy neighborhoods like SoHo and Tribeca. If that\'s not enough choice for food and drink, Chinatown and Little Italy are easy to get to via foot. Guests can also walk a bit farther to get to One World Trade Center and the 9/11 memorial, as well as West, Greenwich, and East Villages.</string>
     <string name="hotel9_images" translatable="false">None</string>
     <string name="hotel9_website_link" translatable="false">http://tribecabluhotel.com/</string>
@@ -89,15 +89,15 @@
     
     <string name="hotel10_name" translatable="false">Sun Bright Hotel</string>
     <string name="hotel10_address" translatable="false"> 140 Hester St, New York, NY 10013</string>
-    <string name="hotel10_description_preview">     </string>
-    <string name="hotel10_description">The Sun Bright hotel is in the center of Chinatown and one block from Grand St. Subway Station. The hotel offers Wi-Fi and a 24-hour front desk.</string>
+    <string name="hotel10_description_preview">The Sun Bright hotel is in the center of Chinatown and one block from Grand Subway Station. The hotel offers</string>
+    <string name="hotel10_description">The Sun Bright hotel is in the center of Chinatown and one block from Grand Subway Station. The hotel offers Wi-Fi and a 24-hour front desk.</string>
     <string name="hotel10_images" translatable="false">None</string>
     <string name="hotel10_website_link" translatable="false">http://sunbrighthotelnyc.com/</string>
     <string name="hotel10_phone_number" translatable="false"> (212) 226-7070   </string>
 
     <string name="hotel11_name" translatable="false">Fairfield Inn &amp;amp; Suites by Marriott New York Manhattan/Downtown</string>
     <string name="hotel11_address" translatable="false">95 Henry St, New York, NY 10002</string>
-    <string name="hotel11_description_preview">     </string>
+    <string name="hotel11_description_preview"> Broasting brand-new, spacious rooms and suites, as well as a convenient location near the New York Stock Exchange, September 11 Memorial...</string>
     <string name="hotel11_description">Boasting brand-new, spacious rooms and suites, as well as a convenient location near the New York Stock Exchange, September 11 Memorial and One World Trade Center,  Fairfield Inn is the perfect place to explore Manhattan from.</string>
     <string name="hotel11_images" translatable="false">None</string>
     <string name="hotel11_website_link" translatable="false">http://www.marriott.com/hotels/travel/nycfm-fairfield-inn-and-suites-new-york-manhattan-downtown-east/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2</string>
@@ -105,7 +105,7 @@
 
     <string name="hotel12_name" translatable="false">Hotel Richland New York</string>
     <string name="hotel12_address" translatable="false">5 Allen St, New York, NY 10002</string>
-    <string name="hotel12_description_preview">     </string>
+    <string name="hotel12_description_preview">Sleep easy in a comfortable room. You can stay entertained with the free Wi-Fi, DVD player, an iPod docking station, and a... </string>
     <string name="hotel12_description">Sleep easy in a comfortable room. You can stay entertained with the free Wi-Fi, DVD player, an iPod docking station, and a flat screen HDTV with over 200 premium channels. If you need to get some work done, take advantage of the work desk and lamp in your room. In the morning, make yourself one of the assorted coffees with the in-room coffee maker.</string>
     <string name="hotel12_images" translatable="false">None</string>
     <string name="hotel12_website_link" translatable="false">http://hotelrichlandnewyork.com/contact/</string>
@@ -113,8 +113,8 @@
 
     <string name="hotel13_name" translatable="false">New World Hotel</string>
     <string name="hotel13_address" translatable="false">101 Bowery #2, New York, NY 10002</string>
-    <string name="hotel13_description_preview">     </string>
-    <string name="hotel13_description">Whether you\'re traveling for business or pleasure, New World Hotel offers a variety of room types to ensure comfort for your needs at low prices. Located at the heart of Chinatown, on Bowery, between Hester St. and Grand Street. New World Hotel puts the treasures of Chinatown at your fingertips. Special foods, items, and shops can be found on Canal Street, Mott Street, and Grand Street. </string>
+    <string name="hotel13_description_preview">Whether you're traveling for business or pleasure, New World Hotel offers a variety of room types to ensure comfort for your needs at low prices...     </string>
+    <string name="hotel13_description">Whether you're traveling for business or pleasure, New World Hotel offers a variety of room types to ensure comfort for your needs at low prices. Located at the heart of Chinatown, on Bowery, between Hester St. and Grand Street. New World Hotel puts the treasures of Chinatown at your fingertips. Special foods, items, and shops can be found on Canal Street, Mott Street, and Grand Street. </string>
     <string name="hotel13_images" translatable="false">None</string>
     <string name="hotel13_website_link" translatable="false">http://worldhotelnyc.com/</string>
     <string name="hotel13_phone_number" translatable="false"> (212) 226-5522   </string>
