--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,7 +121,7 @@
 
     <string name="hotel14_name" translatable="false">Canal Loft Hotel</string>
     <string name="hotel14_address" translatable="false">94 Canal St, New York, NY 10002</string>
-    <string name="hotel14_description_preview">     </string>
+    <string name="hotel14_description_preview"> Boasting a shared lounge, Canal Loft Hotel is situated in New York in the New York State region, an 11-minute walk from Bloomingdales...</string>
     <string name="hotel14_description">Boasting a shared lounge, Canal Loft Hotel is situated in New York in the New York State region, an 11-minute walk from Bloomingdales. Around 1.2 km from Brooklyn Bridge, the property is also 1.6 km away from Ground Zero and offers free WiFi. The property is a 20-minute walk from One World Trade Center.</string>
     <string name="hotel14_images" translatable="false">None</string>
     <string name="hotel14_website_link" translatable="false">http://canal-loft-us.book.direct/en-gb</string>
@@ -129,15 +129,15 @@
 
     <string name="hotel15_name" translatable="false">Windsor Hotel</string>
     <string name="hotel15_address" translatable="false">108 Forsyth St, New York, NY 10002</string>
-    <string name="hotel15_description_preview">     </string>
-    <string name="hotel15_description">Windsor Hotels offer affordable and spacious rooms, each adored with modern amenities and decor. Little Italy is conveniently located within Chinatown and only a few hundred feet away from the hotel. This is also located minutes away from Wall Street, the SOHO District, and the gateway to the Statue of Liberty. In addition, convenient subway stations lead you to the glitter of Times Square, the glamour of the Theatre District, the famous Central Park, shopping at 5th Avenue, the events of Madison Square Garden, and the spirit of the Rockefeller Center. </string>
+    <string name="hotel15_description_preview"> Windsor Hotels offer affordable and spacious rooms, each adored with modern amenities and decor. Little Italy is conveniently located...    </string>
+    <string name="hotel15_description"> Windsor Hotels offer affordable and spacious rooms, each adored with modern amenities and decor. Little Italy is conveniently located within Chinatown and only a few hundred feet away from the hotel. This is also located minutes away from Wall Street, the SOHO District, and the gateway to the Statue of Liberty. In addition, convenient subway stations lead you to the glitter of Times Square, the glamour of the Theatre District, the famous Central Park, shopping at 5th Avenue, the events of Madison Square Garden, and the spirit of the Rockefeller Center. </string>
     <string name="hotel15_images" translatable="false">None</string>
     <string name="hotel15_website_link" translatable="false">http://windsorhotelnyc.com/?src=%2Findex2.html</string>
     <string name="hotel15_phone_number" translatable="false"> (212) 226-3009  </string>
 
     <string name="hotel16_name" translatable="false">Manhattan Bowery Lodge</string>
     <string name="hotel16_address" translatable="false">81 Bowery, New York, NY 10002</string>
-    <string name="hotel16_description_preview">     </string>
+    <string name="hotel16_description_preview"> Manhattan Bowery Lodge is situated in New York, 400 metres from Little Italy and 1.3 km from Brooklyn Bridge...</string>
     <string name="hotel16_description">Manhattan Bowery Lodge is situated in New York, 400 metres from Little Italy and 1.3 km from Brooklyn Bridge.Manhattan Bowery Lodge features free WiFi and a 24-hour front desk. One World Trade Center is 1.5 km away, while Ground Zero is 1.6 km from the property. The nearest airport is LaGuardia Airport, 12 km from the property.</string>
     <string name="hotel16_images" translatable="false">None</string>
     <string name="hotel16_website_link" translatable="false">http://manhattanbowerylodgeny.us/</string>
@@ -145,7 +145,7 @@
 
     <string name="hotel17_name" translatable="false">Bowery Grand Hotel</string>
     <string name="hotel17_address" translatable="false">143 Bowery, New York, NY 10002</string>
-    <string name="hotel17_description_preview">     </string>
+    <string name="hotel17_description_preview">Bowery Grand Hotel provides you with clean room and basic amenities and you decide for yourself where to spend the rest of cash that you saved on fancy hotel... </string>
     <string name="hotel17_description">Bowery Grand Hotel provides you with clean room and basic amenities and you decide for yourself where to spend the rest of cash that you saved on fancy hotel. Minutes away from Little Italy, downtown shopping and right around the corner from Williamsburg Bridge. The rest of NYC is at your disposal just few train stops away, two of which by the way we got so close to our hotel so you have to work harder on your mouse scroll to make them apart from us at Google Maps.</string>
     <string name="hotel17_images" translatable="false">None</string>
     <string name="hotel17_website_link" translatable="false">http://bowerygrandhotel.com/</string>
@@ -153,7 +153,7 @@
 
     <string name="hotel18_name" translatable="false">Comfort Inn Lower East Side</string>
     <string name="hotel18_address" translatable="false">154 Madison St, New York, NY 10002</string>
-    <string name="hotel18_description_preview">     </string>
+    <string name="hotel18_description_preview"> The Comfort Inn Lower East Side is perfectly located in the heart of Manhattan and is one of the newly built hotels in the area...</string>
     <string name="hotel18_description">The Comfort Inn Lower East Side is perfectly located in the heart of Manhattan and is one of the newly built hotels in the area. The subway station is only a short block away, putting guests within walking distance from downtown, Wall Street and popular New York City hotspots like South Street Seaport, The World Trade Center, Little Italy and the Brooklyn Bridge Park and much more!</string>
     <string name="hotel18_images" translatable="false">None</string>
     <string name="hotel18_website_link" translatable="false"> http://www.comfortinnles.com/ </string>
