--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="hotel1_phone_number" translatable="false"> (212) 390-8833   </string>
 
     <string name="hotel2_name" translatable="false">Hotel Mimosa</string>
-    <string name="hotel2_description_preview">otel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero... </string>
+    <string name="hotel2_description_preview"> Hotel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero... </string>
     <string name="hotel2_address" translatable="false">79 Division St, New York, NY 10002</string>
     <string name="hotel2_description">Hotel Mimosa is located in the East Side neighborhood in New York City, just one mile from Ground Zero. All rooms include a flat-screen TV. The rooms have a private bathroom fitted with a bathtub or shower. Extras include free toiletries and a hairdryer. You will find a 24-hour front desk at the property. One World Trade Center is one mile from Hotel Mimosa, and National September 11 Memorial &amp; Museum is 1.1 miles from the property. The nearest airport is LaGuardia Airport, 7 miles from Hotel Mimosa.</string>
     <string name="hotel2_images" translatable="false"> </string>
