--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Chinatown_Tour</string>
+    <string name="app_name">唐人街之旅</string>
     <string name="transport_button">交通运输</string>
     <string name="food_button">食品</string>
     <string name="hotel_button">酒店</string>
@@ -56,4 +56,60 @@
     <string name="Historical_sight6_historical_information">在爱德华 Mooney Bowery 的房子位于 18 ，佩尔街的拐角处，在唐人街附近的曼哈顿、纽约城市建于 1785 和 1789 之间的富裕的屠夫的爱德华 Mooney 在陆地上他购买后就被没收了从英国忠于政府的詹姆斯· Lancey 。</string>
     <string name="Historical_sight7_historical_information">派克街的犹太教堂，建于 1903-04 的。 Kalwarie 教会中以色列的儿子，是一个难得的未亡犹太会堂的建筑，从这一时期的纽约的历史记录时。 下东侧担任美利坚合众国的主要门户网站的数以百万计的犹太移民。</string>
     <string name="Historical_sight8_historical_information">哥伦布公园位于唐人街是一个伟大的地方，参观了儿童和有一个美妙的一天。 有的座位和摇摆不定的一个安全区域，让孩子可以玩。 在大多数情况下，您将运行到音乐家演奏的音乐生活。</string>
+    <string name="activity1_type">博物馆</string>
+    <string name="activity2_name">Mayahana 寺佛教协会</string>
+    <string name="activity2_type">宗教机构</string>
+    <string name="activity3_type">糖果店</string>
+    <string name="activity4_type">购物</string>
+    <string name="activity5_type">酒吧</string>
+    <string name="activity6_name">哥伦布公园</string>
+    <string name="activity6_type">" 公园 "</string>
+    <string name="activity7_name">中国统一福利协会</string>
+    <string name="activity7_type">社区中心</string>
+    <string name="activity8_name">魔术珠宝</string>
+    <string name="activity8_type">购物</string>
+    <string name="Activity1_shopping_description">购物</string>
+    <string name="Activity2_shopping_description">购物</string>
+    <string name="Activity3_shopping_description">购物</string>
+    <string name="Activity4_shopping_description">购物</string>
+    <string name="Activity5_shopping_description">购物</string>
+    <string name="Activity6_shopping_description">购物</string>
+    <string name="Activity7_shopping_description">购物</string>
+    <string name="Activity8_shopping_description">购物</string>
+    <string name="activity10_name">楼梯</string>
+    <string name="activity10_type">卡拉OK酒吧</string>
+    <string name="activity11_name">祖元</string>
+    <string name="activity11_type">温泉</string>
+    <string name="activity12_name">纽约大佬游览</string>
+    <string name="activity12_type">徒步旅行</string>
+    <string name="activity13_name">变形教堂</string>
+    <string name="activity12_address">在Mulberry Worth街道的角落相遇</string>
+    <string name="activity14_name">农历新年游行节</string>
+    <string name="activity14_type">游行</string>
+    <string name="activity14_address">东休斯顿街到运河街</string>
+    <string name="activity15_name">秋季心情游行节</string>
+    <string name="activity15_address">莫特街;运河和Beyard街之间</string>
+    <string name="Activity1_shopping_name">K. K. Discount Store</string>
+    <string name="Activity3_shopping_name">伦虹花店</string>
+    <string name="Activity4_shopping_name">Yùnhóng筷子</string>
+    <string name="Activity5_shopping_name">魔术珠宝</string>
+    <string name="Activity6_shopping_name">珠江玛特</string>
+    <string name="Activity7_shopping_name">唐人街玩具店</string>
+    <string name="Activity8_shopping_name">运河街</string>
+    <string name="Activity8_shopping_address">运河街</string>
+    <string name="Historical_sight1_name">大乘佛教寺庙</string>
+    <string name="Historical_sight2_name">美国华人博物馆</string>
+    <string name="Historical_sight3_name">五点 - 点三</string>
+    <string name="Historical_sight4_name">五点 - 第二点</string>
+    <string name="Historical_sight5_name">Jarmulowski大厦</string>
+    <string name="Historical_sight6_name">爱德华穆尼之家</string>
+    <string name="Historical_sight7_name">派克街犹太教堂</string>
+    <string name="Historical_sight8_name">哥伦布公园</string>
+    <string name="Historical_sight9_name">唐人街汤</string>
+    <string name="Historical_sight9_historical_information">人们对运河街东端可能存在的幻想和困惑是可以理解的，因为唐人街是城市过去和未来相遇的十字路口。这里仍然是少数曼哈顿社区之一，它促进了对其历史的尊重。</string>
+    <string name="allow_location_textview">允许位置</string>
+    <string name="email_editText_hint">请输入您的电子邮件。</string>
+    <string name="language_change_textview">改变语言</string>
+    <string name="feedback_textview">反馈</string>
+    <string name="feedback_edittext">请输入您的反馈。</string>
 </resources>
