--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -202,4 +202,5 @@
     <string name="app_name">Chinatown Tour</string>
     <string name="Activity8_shopping_name">Canal Street</string>
     <string name="Activity8_shopping_address">Canal Street</string>
+    <string name="hotel2_name">Hotel Mimosa</string>
 </resources>
