--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -112,4 +112,57 @@
     <string name="language_change_textview">改变语言</string>
     <string name="feedback_textview">反馈</string>
     <string name="feedback_edittext">请输入您的反馈。</string>
+    <string name="hotel1_name">里昂酒店</string>
+    <string name="hotel1_address">125运河 St, 纽约, 纽约州10002</string>
+    <string name="hotel1_description_preview">位于唐人街的曼哈顿大桥脚下, 这座带有中叶现代气息的时髦酒店.....。</string>
+    <string name="hotel2_name">含羞草酒店</string>
+    <string name="hotel2_description_preview">含羞草酒店坐落在纽约市的东区附近, 离地面只有一英里远.....。</string>
+    <string name="hotel2_address">79分部 St, 纽约, 纽约州10002</string>
+    <string name="hotel3_name">德姆花园唐人街</string>
+    <string name="hotel3_address">93巴利, 纽约, 纽约州10002</string>
+    <string name="hotel3_description_preview">在设计精美的客房和套房设有现代家具、私人阳台和落地窗, 可饱览城市美景.....。</string>
+    <string name="hotel4_name">桑酒店</string>
+    <string name="hotel4_address">52桑 St, 纽约, 纽约州10013</string>
+    <string name="hotel4_description_preview">俯瞰哥伦布公园, 现代唐人街酒店距离小意大利0.3 英里, 从最近的地铁站步行5分钟.....。</string>
+    <string name="hotel5_name">纽约50酒店</string>
+    <string name="hotel5_address">50巴利, 纽约, 纽约州10013</string>
+    <string name="hotel5_description_preview">50酒店位于纽约市唐人街附近, 距地面零点仅0.9 英里.....。</string>
+    <string name="hotel6_name">最佳西方西方柏威里汉比酒店</string>
+    <string name="hotel6_address">231盛大 St, 纽约, 纽约州10013</string>
+    <string name="hotel6_description_preview">这家酒店坐落在曼哈顿市中心, 是从小意大利和400英尺从大街地铁站的步骤.....。</string>
+    <string name="hotel7_name">91酒店</string>
+    <string name="hotel7_address">91东百老汇, 纽约, 纽约州10002</string>
+    <string name="hotel7_description_preview">在曼哈顿的下东区, 酒店91是步行5分钟, 从唐人街和东百老汇地铁站..。</string>
+    <string name="hotel8_name">美国太平洋酒店</string>
+    <string name="hotel8_address">276运河 St, 纽约, 纽约州10013</string>
+    <string name="hotel8_description_preview">坐落在巴厘附近的纽约市, 一英里, 从一个世界贸易中心, 美国太平洋酒店的特色..。</string>
+    <string name="hotel9_name">特里贝卡蓝光</string>
+    <string name="hotel9_address">蓝光酒店, 纽约, 纽约州10013</string>
+    <string name="hotel9_description_preview">特里贝卡蓝光位于运河街和百老汇繁华的市区交汇处。酒店的位置提供了一个城市的感觉与..。</string>
+    <string name="hotel10_name">阳光灿烂酒店</string>
+    <string name="hotel10_address">140海丝特 St, 纽约, 纽约州10013</string>
+    <string name="hotel10_description_preview">阳光明媚的酒店是在唐人街中心和一个街区从大地铁站。酒店提供</string>
+    <string name="hotel11_name">纽约曼哈顿/市中心万豪酒店套房</string>
+    <string name="hotel11_address">95亨利 St, 纽约, 纽约州10002</string>
+    <string name="hotel11_description_preview">拥有崭新的, 宽敞的客房和套房, 以及在纽约证券交易所附近的一个方便的位置, 9月11日纪念..。</string>
+    <string name="hotel12_name">丽晶酒店纽约</string>
+    <string name="hotel12_address">5艾伦 St, 纽约, 纽约州10002</string>
+    <string name="hotel12_description_preview">在舒适的房间里睡觉容易。您可以使用免费无线网络连接、DVD 播放机、iPod 扩充基座和..。</string>
+    <string name="hotel13_name">新世界酒店</string>
+    <string name="hotel13_address">101巴利</string>
+    <string name="hotel13_description_preview">无论您是出差还是旅游, 新世界酒店都提供多种类型的客房, 以确保您在低价位的需求.....。</string>
+    <string name="hotel14_name">运河阁楼酒店</string>
+    <string name="hotel14_address">94运河 St, 纽约, 纽约州10002</string>
+    <string name="hotel14_description_preview">运河阁楼酒店坐落在纽约的纽约州, 距离布卢明代尔11分钟步行路程, 拥有共用休息室。</string>
+    <string name="hotel15_name">温莎酒店</string>
+    <string name="hotel15_address">108圣会 St, 纽约, 纽约州10002</string>
+    <string name="hotel15_description_preview">温莎酒店提供价格实惠和宽敞的客房, 每一间都深受现代设施和装饰的喜爱。小意大利是方便的位置..。</string>
+    <string name="hotel16_name">曼哈顿小屋酒店</string>
+    <string name="hotel16_address">81巴利, 纽约, 纽约州10002</string>
+    <string name="hotel16_description_preview">曼哈顿巴利小屋坐落在纽约, 距离小意大利400米, 从布鲁克林大桥1.3 公里.....。</string>
+    <string name="hotel17_name">大酒店</string>
+    <string name="hotel17_address">143巴利, 纽约, 纽约州10002</string>
+    <string name="hotel17_description_preview">格兰德大酒店为您提供干净的房间和基本的设施, 您自己决定在哪里花其余的现金, 您保存在豪华酒店..。</string>
+    <string name="hotel18_name">舒适客栈下东区</string>
+    <string name="hotel18_address">154麦迪逊 St, 纽约, 纽约州10002</string>
 </resources>
