--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,7 +207,7 @@
     <string name="activity1_static">devoted to presenting and preserving
     the history, heritage, and culture of Chinese immigrants in the US</string>
     <string name="activity1_type">museum</string>
-    <string name="activity1_address" translatable="false">215 Centre Street</string>
+    <string name="activity1_address">215 Centre Street</string>
     <string name="activity1_website" translatable="false">mocanyc.org</string>
     <string name="activity1_phone_number" translatable="false">212-619-4785</string>
 
@@ -216,7 +216,7 @@
     formal ceremonies on weekends, fortune telling, weddings,
     and areas for friends and families of the deceased to pay their respects</string>
     <string name="activity2_type">religious institution</string>
-    <string name="activity2_address" translatable="false">133 Canal Street</string>
+    <string name="activity2_address">133 Canal Street</string>
     <string name="activity2_website" translatable="false">mahayana.us</string>
     <string name="activity2_phone_number" translatable="false">212-925-8787</string>
 
@@ -224,7 +224,7 @@
     <string name="activity3_static">an Asian snack paradise for those wishing to satisfy their sweet
     tooth; sells a variety of dried foods, exotic hard-to-find savory treats, and nostalgic Western treats</string>
     <string name="activity3_type">confectionery shop</string>
-    <string name="activity3_address" translatable="false">37 Mott Street</string>
+    <string name="activity3_address">37 Mott Street</string>
     <string name="activity3_phone_number" translatable="false">212-233-7650</string>
 
     <string name="activity4_name" translatable="false">Canal Street</string>
@@ -236,7 +236,7 @@
     <string name="activity5_static">a bar inspired by European apothecaries and resembles
     a chemistry lab; offers over 250 cocktails, referred to as "prescriptions"</string>
     <string name="activity5_type">bar</string>
-    <string name="activity5_address" translatable="false">9 Doyers Street</string>
+    <string name="activity5_address">9 Doyers Street</string>
     <string name="activity5_website" translatable="false">apothekenyc.com</string>
     <string name="activity5_phone_number" translatable="false">212-406-0400</string>
 
@@ -244,7 +244,7 @@
     <string name="activity6_static">at the heart of Chinatown; has a basketball court,
     playground, Astroturf field; The north is an area for mah-jongg and card players</string>
     <string name="activity6_type">park</string>
-    <string name="activity6_address" translatable="false">66 Mulberry Street</string>
+    <string name="activity6_address">66 Mulberry Street</string>
     <string name="activity6_website" translatable="false">nycgovparks.org/parks/columbus-park-m015/</string>
     <string name="activity6_phone_number" translatable="false">212-406-0400</string>
 
@@ -252,7 +252,7 @@
     <string name="activity7_static">founded to serve and protect the interests of the Chinese people in
     the New York metropolitan area; provides social services, language classes and cultural preservation activities</string>
     <string name="activity7_type">community center</string>
-    <string name="activity7_address" translatable="false">62 Mott Street</string>
+    <string name="activity7_address">62 Mott Street</string>
     <string name="activity7_website" translatable="false">ccbanyc.org</string>
     <string name="activity7_phone_number" translatable="false">212-226-6280</string>
 
@@ -260,27 +260,27 @@
     <string name="activity8_static">an occult shop which specializes in feng shui,
     crystals, and horoscopes; the only place in the city that photographs and reads auras</string>
     <string name="activity8_type">shopping</string>
-    <string name="activity8_address" translatable="false">238 Canal Street</string>
+    <string name="activity8_address">238 Canal Street</string>
     <string name="activity8_phone_number" translatable="false">212-343-0663</string>
 
     <string name="activity9_name" translatable="false">Mmuseumm</string>
     <string name="activity9_static">a modern natural history museum located in a
     freight elevator; collection of unique artifacts</string>
-    <string name="activity9_address" translatable="false">4 Cortlandt Alley</string>
+    <string name="activity9_address">4 Cortlandt Alley</string>
     <string name="activity9_website" translatable="false">mmuseumm.com</string>
     <string name="activity9_phone_number" translatable="false">888-763-8839</string>
 
     <string name="activity10_name">Up Stairs</string>
     <string name="activity10_static">located on the second floor of an apartment building;     This small but lively bar encourages patrons to belt out to the classics while drinking brews on tap</string>
     <string name="activity10_type">karaoke bar</string>
-    <string name="activity10_address" translatable="false">59 Canal Street</string>
+    <string name="activity10_address">59 Canal Street</string>
     <string name="activity10_phone_number" translatable="false">646-559-0098</string>
 
     <string name="activity11_name">Zu Yuan</string>
     <string name="activity11_static">spend a day of relaxation and unwinding; provides spa
     and beauty services for face and body </string>
     <string name="activity11_type">spa</string>
-    <string name="activity11_address" translatable="false">48 Mott Street</string>
+    <string name="activity11_address">48 Mott Street</string>
     <string name="activity11_phone_number" translatable="false">212-587-8881</string>
 
     <string name="activity12_name">NYC Gangster Tours</string>
@@ -299,7 +299,7 @@
     <string name="activity13_name">Church of the Transfiguration</string>
     <string name="activity13_static">serves the Irish, German, Italian and, most recently, Chinese communities;
      Sunday masses are held in English, Mandarin, and Cantonese; houses a chinese school</string>
-    <string name="activity13_address" translatable="false">29 Mott Street</string>
+    <string name="activity13_address">29 Mott Street</string>
     <string name="activity13_website" translatable="false">transfigurationnyc.org</string>
     <string name="activity13_phone_number" translatable="false">212-962-5157</string>
 
