--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -321,7 +321,7 @@
     <string name="Activity1_shopping_Static_Info">No-frills stalwart stocking a variety of home goods &amp; Asian decor, from teapots to small furniture.</string>
     <string name="Activity1_shopping_description"> Shopping </string>
     <string name="Activity1_shopping_images" translatable="false">  </string>
-    <string name="Activity1_shopping_address" translatable="false"> 78 Mulberry St, New York, NY 10013 </string>
+    <string name="Activity1_shopping_address"> 78 Mulberry St, New York, NY 10013 </string>
     <string name="Activity1_shopping_website_link" translatable="false"> http://www.kkdiscount.com/ </string>
     <string name="Activity1_shopping_phone_number" translatable="false"> (212) 513-7043 </string>
 
@@ -329,7 +329,7 @@
     <string name="Activity2_shopping_Static_Info">T-Pop Shop is a trendsetting Online Second Hand Clothing Store, offering first-rate products and exceptional customer     service to shoppers from the comfort of their own homes</string>
     <string name="Activity2_shopping_description">Shopping  </string>
     <string name="Activity2_shopping_images" translatable="false">  </string>
-    <string name="Activity2_shopping_address" translatable="false">59 Franklin St, New York, NY 10013  </string>
+    <string name="Activity2_shopping_address">59 Franklin St, New York, NY 10013  </string>
     <string name="Activity2_shopping_website_link" translatable="false"> http://www.tpopshop.nyc/ </string>
     <string name="Activity2_shopping_phone_number" translatable="false"> (917) 582-0701 </string>
 
@@ -337,7 +337,7 @@
     <string name="Activity3_shopping_Static_Info"> If you need flowers arrangements, this is the place to go! Reasonably priced, and beautiful selections to choose from! </string>
     <string name="Activity3_shopping_description">Shopping  </string>
     <string name="Activity3_shopping_images" translatable="false">  </string>
-    <string name="Activity3_shopping_address" translatable="false">50 Mulberry St, New York, NY 10013  </string>
+    <string name="Activity3_shopping_address">50 Mulberry St, New York, NY 10013  </string>
     <string name="Activity3_shopping_website_link" translatable="false"> N/a </string>
     <string name="Activity3_shopping_phone_number" translatable="false"> (212) 233-2950 </string>
 
@@ -345,7 +345,7 @@
     <string name="Activity4_shopping_Static_Info"> An excellent selection and display of various chopsticks. The selections range from simple children\'s, to elegant formal chopsticks.  </string>
     <string name="Activity4_shopping_description">Shopping  </string>
     <string name="Activity4_shopping_images" translatable="false">  </string>
-    <string name="Activity4_shopping_address" translatable="false"> 50 Mott St, New York, NY 10013 </string>
+    <string name="Activity4_shopping_address"> 50 Mott St, New York, NY 10013 </string>
     <string name="Activity4_shopping_website_link" translatable="false"> N/a </string>
     <string name="Activity4_shopping_phone_number" translatable="false"> (212) 566-8828 </string>
 
@@ -353,7 +353,7 @@
     <string name="Activity5_shopping_Static_Info">An occult shop which specializes in feng shui, crystals, and horoscopes; the only place in the city that photographs and reads auras  </string>
     <string name="Activity5_shopping_description">Shopping  </string>
     <string name="Activity5_shopping_images" translatable="false">  </string>
-    <string name="Activity5_shopping_address" translatable="false"> 238 Canal Street New York NY 10013 </string>
+    <string name="Activity5_shopping_address"> 238 Canal Street New York NY 10013 </string>
     <string name="Activity5_shopping_website_link" translatable="false"> N/a </string>
     <string name="Activity5_shopping_phone_number" translatable="false"> (212) 343-0663 </string>
 
@@ -361,7 +361,7 @@
     <string name="Activity6_shopping_Static_Info">Eclectic emporium with 3-floors of Chinese apparel, accessories, housewares &amp; furniture.</string>
     <string name="Activity6_shopping_description"> Shopping </string>
     <string name="Activity6_shopping_images" translatable="false">  </string>
-    <string name="Activity6_shopping_address" translatable="false">395 Broadway, New York, NY 10013  </string>
+    <string name="Activity6_shopping_address">395 Broadway, New York, NY 10013  </string>
     <string name="Activity6_shopping_website_link" translatable="false">http://www.pearlriver.com/  </string>
     <string name="Activity6_shopping_phone_number" translatable="false"> (212) 431-4770 </string>
 
@@ -369,7 +369,7 @@
     <string name="Activity7_shopping_Static_Info">" Come here for cute and cheap toys! So much product and easy to get lost in because of extremely cheap prices. Small stuffed     animals (rilakkuma, doraemon, Totoro, Pokémon, etc) ranging from $3 to $5 "</string>
     <string name="Activity7_shopping_description"> Shopping </string>
     <string name="Activity7_shopping_images" translatable="false">  </string>
-    <string name="Activity7_shopping_address" translatable="false"> 83 Bayard St, New York, NY 10013 </string>
+    <string name="Activity7_shopping_address"> 83 Bayard St, New York, NY 10013 </string>
     <string name="Activity7_shopping_website_link" translatable="false"> http://www.facebook.com/chinatowntoystore </string>
     <string name="Activity7_shopping_phone_number" translatable="false"> N/a </string>
 
@@ -386,13 +386,13 @@
 
 
     <string name="Historical_sight1_name">Mahayana Buddhist Temple  </string>
-    <string name="Historical_sight1_address" translatable="false"> 133 Canal St, New York, NY 10002 </string>
+    <string name="Historical_sight1_address"> 133 Canal St, New York, NY 10002 </string>
     <string name="Historical_sight1_historical_information"> The Mahayana Buddhist Temple is free, open to the public and offers a large meditation area with plenty of space to rest and reflect under the gaze of a 16-foot-high golden Buddha. Just don\'t expect silence here; there\'s usually a festive sound track playing (this is New York City, after all). While the giant Buddha is the temple\'s main attraction, don\'t miss the series of intricate ivory carvings on display in the second-floor gift shop (none are for sale). </string>
     <string name="Historical_sight1_images" translatable="false">  </string>
     <string name="Historical_sight1_website" translatable="false">https://www.nycgo.com/arts-culture/mahayana-buddhist-temple  </string>
 
     <string name="Historical_sight2_name"> Museum of Chinese in America </string>
-    <string name="Historical_sight2_address" translatable="false"> 215 Centre St, New York, NY 10013 </string>
+    <string name="Historical_sight2_address"> 215 Centre St, New York, NY 10013 </string>
     <string name="Historical_sight2_historical_information"> The Museum promotes dialogue and understanding among people of all cultural backgrounds, bringing 160 years of Chinese American history to vivid life through its innovative exhibitions, educational and cultural programs. </string>
     <string name="Historical_sight2_images" translatable="false">  </string>
     <string name="Historical_sight2_website" translatable="false"> www.mocanyc.org </string>
